Archive2/e3/f74aeb70ddc6e7/output
main.cpp:1:45: warning: character constant too long for its type [enabled by default]
 test.cpp|14 col 39| warning: the address of 'int elapsedtime(int, int)' will always evaluate as 'true' [-Waddress]
                                             ^
main.cpp:1:97: warning: multi-character character constant [-Wmultichar]
 test.cpp|14 col 39| warning: the address of 'int elapsedtime(int, int)' will always evaluate as 'true' [-Waddress]
                                                                                                 ^
main.cpp:1:1: error: 'test' does not name a type
 test.cpp|14 col 39| warning: the address of 'int elapsedtime(int, int)' will always evaluate as 'true' [-Waddress]
 ^
