Archive2/e3/f74aeb70ddc6e7/main.cpp
test.cpp|14 col 39| warning: the address of 'int elapsedtime(int, int)' will always evaluate as 'true' [-Waddress]
